# MathFinanceWorkshop

./: .gitignore  CMakeLists.txt  README.md  environment.yml
doc/: CMakeLists.txt  Doxyfile.in
include/: MathFinanceWorkshop.hpp
main/: CMakeLists.txt  main.cpp
notebooks/: Implied Volatility.ipynb  Real Data Strategies.ipynb  Simulating Strategies.ipynb  Stock Data Visualisation.ipynb
notebooks/Data/: .competitionData.txt  testData.txt
notebooks/MathFinanceWorkshop/: MFW_Simulation.py  MFW_plot.py  __init__.py
src/: CMakeLists.txt  MathFinanceWorkshop.cpp
