

PROJECT(  MathFinanceWorkshop )

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

SET(NAG_DIR $ENV{HOME}/Codes/NAG/cll6a23dhl )
find_library(NAG_LIBRARY_PATH nagc_nag PATHS ${NAG_DIR}/lib)
LINK_DIRECTORIES(${NAG_DIR}/lib  )

FIND_PACKAGE ( Threads REQUIRED )

INCLUDE_DIRECTORIES( include ${NAG_DIR}/include)

#ADD_COMPILE_OPTIONS(-Wall -Wextra -Wpedantic )

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib) 
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)

ADD_SUBDIRECTORY( src )
ADD_SUBDIRECTORY( main )
ADD_SUBDIRECTORY( doc )


